--- a/extra/vimrc.preconf.sample
+++ b/extra/vimrc.preconf.sample
@@ -56,7 +56,9 @@
 " you need to create this folder
  set directory=$HOME/.cache/vimtmp//
 
-packadd matchit
+if !has('nvim')
+   packadd matchit
+endif
 " Configures in the config/plugins folder
 packadd termdebug
 
