feat(toml): syntax highlight

--- a/default_ft.toml
+++ b/default_ft.toml
@@ -61,3 +61,9 @@ on_ft = 'tex'
 [[plugins]]
 repo  = 'plasticboy/vim-markdown'
 on_ft = 'markdown'
+
+# TOML
+
+[[plugins]]
+repo = 'cespare/vim-toml'
+on_ft = 'toml'
