feat(Mark): use original repo
Also add ON/OFF for cmake in Switch

--- a/default.toml
+++ b/default.toml
@@ -74,7 +74,7 @@ repo = 'rhysd/git-messenger.vim'
 repo = 'machakann/vim-highlightedyank'
 
 [[plugins]] # higlight word / pattern
-repo = 'CharlesGueunet/vim-mark'
+repo = 'inkarkat/vim-mark'
 depends = ['vim-ingo-library']
 
 [[plugins]]
