--- a/extra/vimrc.preconf.sample
+++ b/extra/vimrc.preconf.sample
@@ -5,55 +5,59 @@
 " Leader key
 """"""""""""""""""""""""""""""""""""""
 
-" change leader to space
-"let mapleader=" "
+"" change leader to space
+" let mapleader=" "
 
 """""""""""""""""""""""""""""""""""""
 " Disable/Enable part of the default conf
 " Uncomment what you need to disable
 """"""""""""""""""""""""""""""""""""""
 
-" continuous completion
-" may slow down vim on large project
+"" continuous completion
+"" may slow down vim on large project
 " let g:Vimmic_AlwaysComplete=1
 
-" hide help on plugins
+"" hide help on plugins
 " let g:Vimmic_HideHelp=1
 
-" default colors :
+"" default colors :
 " let g:Vimmic_DisableDefaultColors=1
 
-" highlight word under cursor
+"" highlight word under cursor
 " let g:Vimmic_NoHiCurWrod=1
 
-" the right margin
+"" the right margin
 " let g:Vimmic_DisableMargin=1
 " let g:Vimmic_MarginPos="120"
 " let g:Vimmic_MarginBG="Black"
 
-" Statusbar colors
+" colors
 
+"" Terminal colors example
+" let g:DefaultBG='233'
 " let g:StatusBG="White"
 " let g:StatusLeftBG="233"
-" if $USER ==# "root"
+" if $USER ==# 'root'
 "    let g:StatusLeftBG='1'
 " else
 "    let g:StatusLeftBG='4'
 " endif
-" let g:StatusNCBG="233"
-" let g:StatusNCFG="White"
+" let g:StatusNCBG='233'
+" let g:StatusNCFG='White'
 "" Modes colors
-" let g:StatusNormalFG="0"
-" let g:StatusInsertFG="Blue"
-" let g:StatusReplaceFG="Red"
-" True colors example
-"" set termguicolors
+" let g:StatusNormalFG='0'
+" let g:StatusInsertFG='Blue'
+" let g:StatusReplaceFG='Red'
+
+"" True colors example
+" set termguicolors
+" let g:DefaultBG='#263238'
 " let g:StatusNormalFG='#fafafa'
 " let g:StatusInsertFG='#2196f3'
 " let g:StatusReplaceFG='#f44336'
 " let g:StatusBG='#162228'
 " let g:StatusNCBG='#263238'
-" if $USER ==# "root"
+" if $USER ==# 'root'
 "    let g:StatusLeftBG='#dd7186'
 " else
 "    let g:StatusLeftBG='#2196f3'
