--- a/plugins.toml
+++ b/plugins.toml
@@ -14,6 +14,9 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
+[[plugins]]
+repo = 'wsdjeg/dein-ui.vim'
+
 # Default list of plugins
 #########################
 
