feat(TagBar): asynchronous + coc compatible

--- a/plugins.toml
+++ b/plugins.toml
@@ -26,6 +26,9 @@ repo = 'Shougo/dein.vim'
 repo   = 'scrooloose/nerdtree'
 on_cmd = ['NERDTreeFind', 'NERDTreeToggle']
 
+[[plugins]]
+repo = 'liuchengxu/vista.vim'
+
 [[plugins]] # marks
 repo = 'kshenoy/vim-signature'
 
