feat(CMake): Keep the cmake-completion-plugin
as it is really good

--- a/plugins_ft.toml
+++ b/plugins_ft.toml
@@ -72,9 +72,9 @@ on_ft = 'toml'
 
 ## Build system
 
-# [[plugins]]
-# repo  = 'richq/vim-cmake-completion'
-# on_ft = 'cmake'
+[[plugins]]
+repo  = 'richq/vim-cmake-completion'
+on_ft = 'cmake'
 
 [[plugins]]
 repo  = 'nickhutchinson/vim-cmake-syntax'
