feat(completion): javascript

--- a/plugins_ft.toml
+++ b/plugins_ft.toml
@@ -38,6 +38,11 @@ build = 'npm install'
 if    ='executable("npm")'
 on_ft = ['javascript', 'json', 'css', 'scss', 'html', 'typescript']
 
+[[plugins]]
+repo = 'neoclide/coc-tsserver'
+depends = 'coc.nvim'
+on_ft = ['javascript','typescript']
+
 ## Modeling langage
 
 # XML / HTML
