chore(style): improve virtual cursor
and remove coc python as manual install is better

--- a/plugins_ft.toml
+++ b/plugins_ft.toml
@@ -19,10 +19,10 @@ on_ft = ['c','cpp']
 
 # Python
 
-[[plugins]]
-repo = 'neoclide/coc-python'
-depends = 'coc.nvim'
-on_ft = 'python'
+# [[plugins]]
+# repo = 'neoclide/coc-python'
+# depends = 'coc.nvim'
+# on_ft = 'python'
 
 # Golang
 
